force-app/main/default/objects/OppScoreWeight__c/OppScoreWeight__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Opportunity Score Weight</label>
</CustomObject>