force-app/main/default/objects/OppScoreWeight__c/fields/ContactReason__c.field-meta.xml
<CustomField>
    <fullName>ContactReason__c</fullName>
    <label>Contact Reason Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>