force-app/main/default/objects/OppScoreWeight__c/fields/LeadChannelWeight__c.field-meta.xml
<CustomField>
    <fullName>LeadChannelWeight__c</fullName>
    <label>Lead Channel Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>