force-app/main/default/objects/OppScoreWeight__c/fields/NewVenue__c.field-meta.xml
<CustomField>
    <fullName>NewVenue__c</fullName>
    <label>New Venue Score Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>